--- a/examples/cdn/index.html
+++ b/examples/cdn/index.html
@@ -16,7 +16,7 @@
       crossorigin
       src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
     ></script>
-    <script src="./node_modules/react-component-utility/dist/umd/index.js"></script>
+    <script src="https://unpkg.com/react-component-utility@latest/dist/umd/index.js"></script>
     <script>
       const { Emoji } = window.ReactComponentUtility
       const container = document.getElementById('container')
